Changes towards version 0.7:
- Fixed misaligned cargo count (bug #1092) - Coredev
- Fixed the network SuperMelee team configuration protocol - SvdB
- Fixed fuel reserve bounds checks - SvdB
- Fixed a crash when filling fuel tanks over 10 (bug #1082) - Alex
- Got rid of many warnings - SvdB
- Clean up and some refactoring of the SuperMelee code - SvdB
- Fixed concurrent screen fades regression (bug #1079) - Alex
- Removed some legacy source code files related to resources - SvdB
- Put SuperMelee source files in separate subdirectory - SvdB
- Added additive and alpha drawing modes to graphics lib - Alex
- Fixed black pixel gaps between the planet and shield when entering the
  orbit of a shielded planet (bug #32) - Alex
- Split off SDL-specific colormap bits into SDL domain - Alex
- Fixed planet blinking when exiting scan (bug #799) - Alex
- Restore menu sounds after editing a control set name (bug #1066) - Alex
- Use an own 'UniChar' rather than 'wchar_t', which may not be large
  enough, depending on the platform - SvdB
- Added 'COLOR' resource type - SvdB
- All graphics operations use 24-bits colors at the game level too now,
  instead of 16 bits colors. - SvdB
- Cross-platform safemode (ignores uqm.cfg, bug #946) - Michael
- Correct Chmmr response when asking about Sa-Matra (bug #1073) - Alex
- Refactored universe generation - SvdB
- Comm animation processing rewrite, bugs fixed - Alex
- Added graphics context debugging function - SvdB
- Thread down-throttling and game sleep when inactive (currently disabled),
  (bug #1070), from Flandry
- Internal changes: GOOD_GUY/BAD_GUY ship flags retired - Alex
- Fixed Melee menu timeout when both sides are Cyborgs (bug #1067) - Alex
- Fixed AI ship not moving on warp in (bug #648) - Alex
- Revert gfx settings entirely when a mode switch fails (bug #1056) - Alex
- Fixed the Syreen lights-out scene timing (bug #1011) - Alex
- Added a native error box for MacOSX (like we have for Windows) - Alex